--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^6.6.2"
   },
   "devDependencies": {
-    "babel-register": "^6.26.0"
+    "babel-register": "^6.26.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
